# pfe

./: .gitignore  Cargo.toml  Makefile  README.md  make_fixtures
dilithium-bindings/: CMakeLists.txt  bindings.c  bindings.h
doc/presentation/: manim.py
rust-dilithium/: Cargo.toml
rust-dilithium-esp/: .gitignore  Cargo.toml  sdkconfig.defaults
rust-dilithium-esp/.cargo/: config.toml
rust-dilithium-esp/examples/: compare.rs  demo-reader.rs  demo-sender.rs  jammer.py  speed-keys.rs  speed-sign.rs  speed-verify-fail.rs  speed-verify.rs  speed.rs
rust-dilithium-esp/src/: lib.rs  main.rs
rust-dilithium/src/: aes_digest.rs  array_math.rs  coefficient.rs  counter.rs  expand.rs  lib.rs  packing.rs  polynomial.rs  subarray.rs  tests.rs  vector.rs
rust-dilithium/src/polynomial/: ntt.rs  plain.rs
rust-dilithium/src/tests/: fixtures.rs
src/: aes_digest.rs  coefficient.rs  expand.rs  lib.rs  tests.rs  vector.rs
src/tests/: fixtures.rs
tests/: fixtures.txt  unit.rs
