[package]
name = "rust-dilithium-esp"
version = "0.1.0"
edition = "2021"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.31.11", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.43.1", default-features = false, features = ["alloc"] }
rust-dilithium = { path = "../rust-dilithium", default-features = false }

[build-dependencies]
embuild = "0.30.4"
