[package]
name = "rust-dilithium-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.32.1", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.45.0", default-features = false, features = ["alloc"] }
rust-dilithium = { path = "../rust-dilithium", default-features = false }

[build-dependencies]
embuild = "0.30.4"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["../dilithium-bindings"]
bindings_header = "../dilithium-bindings/bindings.h"
